# lib_gif

./: .gitignore  CMakeLists.txt  README.md  gif_font.c  lib.def  lib.def.in
cmake/: unistd.h.in  util.cmake
doc/: CMakeLists.txt
lib/: CMakeLists.txt  getopt.h  gif_lib.h  gif_lib_private.h  lib.def  openbsd-reallocarray.c  unistd.h
opt/: folders.csv
tests/: CMakeLists.txt
util/: CMakeLists.txt
